Fixed: Menu item labels are cut off on Linux

--- a/themes/base.css
+++ b/themes/base.css
@@ -931,6 +931,7 @@ x-menuitem x-label {
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: inherit;
+  line-height: 1.4;
 }
 x-menuitem img + x-label,
 x-menuitem x-swatch + x-label,
